tests/errors/array_index_type.orus
fn main() {
    let arr: [i64; 2] = [1, 2, 3, 5]
    print(arr[true])
}
